commit 05/11/2019 new anim

--- a/projets-web/Demo_Transparent_Login_Form/index.html
+++ b/projets-web/Demo_Transparent_Login_Form/index.html
@@ -13,7 +13,7 @@
 
     <div class="login-wrapper">
         <form action="" class="form">
-            <img src="Images/avatar.png" alt="">
+            <img src="Images/512.png" alt="">
             <h2>Login</h2>
             <div class="input-group">
                 <input type="text" name="loginUser" id="loginUser" required>
@@ -23,8 +23,8 @@
                 <input type="password" name="loginPassword" id="loginPassword" required>
                 <label for="loginPassword">Password</label>
             </div>
-            <input type="submit" value="Login" class="submit-button">
-            <a href="#forgot-password" class="forgot-pw">Forgot Password ?</a>
+            <input type="submit" value="Login" class="submit-btn">
+            <a href="#forgot-pw" class="forgot-pw">Forgot Password ?</a><!--envoie vers id forgot-pw-->
         </form>
 
         <div id="forgot-pw">
@@ -35,7 +35,7 @@
                     <input type="email" name="email" id="email" required>
                     <label for="email">Email</label>
                 </div>
-                <input type="submit" value="Login" class="submit-button">
+                <input type="submit" value="Submit" class="submit-btn">
             </form>
         </div>
     </div>
