--- a/projets-web/Demo_Leaves_Animation/index.html
+++ b/projets-web/Demo_Leaves_Animation/index.html
@@ -9,6 +9,39 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <section>
+            <div class="set">
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png"width="200px" height="200px" ></div>
+                <div><img src="leaf10.png" width="200px" height="200px"></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png" width="200px" height="200px"></div>
+                <div><img src="leaf10.png"width="200px" height="200px" ></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+            </div>
+            <div class="set set2">
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png"width="200px" height="200px" ></div>
+                <div><img src="leaf10.png" width="200px" height="200px"></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png" width="200px" height="200px"></div>
+                <div><img src="leaf10.png"width="200px" height="200px" ></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+            </div>
+        </section>
     </body>
 </html>
