--- a/projets-web/Demo_Leaves_Animation/index.html
+++ b/projets-web/Demo_Leaves_Animation/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <section>
+            <h2>Animate Leaves</h2>
             <div class="set">
                 <div><img src="leaf8.png" width="200px" height="200px"></div>
                 <div><img src="leaf3.png" width="200px" height="200px"></div>
@@ -27,6 +28,22 @@
                 <div><img src="leaf2.png" width="200px" height="200px"></div>
             </div>
             <div class="set set2">
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png"width="200px" height="200px" ></div>
+                <div><img src="leaf10.png" width="200px" height="200px"></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+                <div><img src="leaf8.png" width="200px" height="200px"></div>
+                <div><img src="leaf3.png" width="200px" height="200px"></div>
+                <div><img src="leaf9.png" width="200px" height="200px"></div>
+                <div><img src="leaf7.png" width="200px" height="200px"></div>
+                <div><img src="leaf10.png"width="200px" height="200px" ></div>
+                <div><img src="leaf6.png" width="200px" height="200px"></div>
+                <div><img src="leaf2.png" width="200px" height="200px"></div>
+            </div>
+            <div class="set set3">
                 <div><img src="leaf8.png" width="200px" height="200px"></div>
                 <div><img src="leaf3.png" width="200px" height="200px"></div>
                 <div><img src="leaf9.png" width="200px" height="200px"></div>
