--- a/projets-web/DEMO_CodePen_Hearthstone_3d_clickCard/index.html
+++ b/projets-web/DEMO_CodePen_Hearthstone_3d_clickCard/index.html
@@ -9,6 +9,9 @@
     <script src="card.js"></script>
 </head>
 <body>
-    
+    <div class="card">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/836/hearthstone-ragnaros.png" 
+        class="card-image" draggable="false">
+    </div>
 </body>
 </html>
